# aria2tray

./: .clang-format  .clangd  .gitignore  LICENSE  Makefile  PKGBUILD  README.md  build.bat  build.ps1  installer.nsi  meson.build  resource.rc
assets/: aria2tray.desktop
src/: logs.cpp  logs.h  main.cpp  meson.build  options.cpp  options.h  process.cpp  process.h  win.cpp  win.h
src/dialogs/: about.cpp  about.h
src/ipc/: jsonrpc.cpp  jsonrpc.h  wsclient.cpp  wsclient.h  wsserver.cpp  wsserver.h
src/resources/: documents.qrc  images.qrc
src/translations/: aria2tray.ts  aria2tray_en.ts  aria2tray_id.ts  meson.build
test/: websocket.js
